--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </footer>
   </div>
 
-  <script type="module" src="./js/game.js"></script>
+  <script type="module" src="./game.js"></script>
 </body>
 </html>
