feat: refresh gameplay with royale assets

--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
           <div class="elixir-text"><span id="elixirText">0 / 10</span></div>
         </div>
 
-        <div id="cards" class="cards"></div>
+        <div class="hand" aria-label="player hand">
+          <div id="cards" class="cards"></div>
+          <div class="next-card" aria-hidden="true">
+            <span class="label">Next</span>
+            <div id="nextCard" class="card ghost"></div>
+          </div>
+        </div>
       </div>
     </main>
 
     <footer class="footer">
-      <p>Made for learning. Not affiliated with Supercell. Art is just shapes. <a href="https://github.com/" target="_blank" rel="noreferrer">Deploy to GitHub Pages</a>.</p>
+      <p>Made for learning. Not affiliated with Supercell. Arena and troop artwork &copy; Supercell / RoyaleAPI asset mirror. <a href="https://github.com/" target="_blank" rel="noreferrer">Deploy to GitHub Pages</a>.</p>
     </footer>
   </div>
 
